# green

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST  MANIFEST.in  Makefile  PythonTestingWithGreen.md  README-pypi.rst  README.md  appveyor.yml  bash_completion.sh  cli-options.txt  dist.md  g  g2  g27  g3  g34  help.txt  n2p2  n2p3  py3loader.py  pyproject.toml  release.md  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.cfg  setup.py  test_versions  zsh_completion.sh
.github/: FUNDING.yml
.github/workflows/: ci-windows.yml  ci.yml  label-sponsors.yml  release-test.yml  release.yml
example/: spam.xml
example/proj/: foo.py
example/proj/test/: test_foo.py
examples/: test_fast.py  test_slow.py
green/: VERSION  __init__.py  __main__.py  cmdline.py  command.py  config.py  djangorunner.py  examples.py  exceptions.py  junit.py  loader.py  output.py  plugin.py  process.py  reporting.py  result.py  runner.py  shell_completion.sh  subprocess.py  suite.py  terminal.py  version.py  watch.py
green/test/: test_cmdline.py  test_command.py  test_config.py  test_djangorunner.py  test_integration.py  test_junit.py  test_junit_report.py  test_load_tests.py  test_loader.py  test_output.py  test_plugin.py  test_process.py  test_reporting.py  test_result.py  test_runner.py  test_subprocess.py  test_suite.py  test_version.py  test_windows.py
