#
# pyproject.toml file for cleancut/green
#
# For now mostly empty as the project metadata remains in setup.cfg to provide
# backward compatibility with setup.py.


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.mypy]
# Targetting versions of python officially supported by python.org since third
# party libraries will have support for newer python syntax, throwing errors.
python_version = "3.8"
sqlite_cache = true
namespace_packages = true
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
# Ignore untyped defs for now.
# check_untyped_defs = true
show_error_codes = true
# This might require to set `--no-pretty` in your IDE plugin.
pretty = true


[tool.coverage.run]
source = ["green"]
